{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Unit",
            "id": "4a47342b-d9bd-4c14-a8dd-3347b3d9e8db",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "257a34f9-c15e-46ae-b08c-60b97bb61f0d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwordAttack",
                    "type": "Button",
                    "id": "cf67cc4d-4c06-4613-aaf2-1091bb8307c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShieldAttack",
                    "type": "Button",
                    "id": "f0e12deb-23fa-4745-b04f-04f860c1e4e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockTarget",
                    "type": "Button",
                    "id": "78fc1f3d-8f5b-465e-b101-ffe356c5b201",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "88a35ed0-1c91-46e4-b607-6eba29ef94e9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7e0e1bc6-f486-4034-ba6b-e8236c4eb4f7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "33a2a045-f459-460d-b6a5-c8034317c290",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "19505a96-4338-4a23-8f74-f8b931326828",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c7d5784f-6bf8-4923-b4c7-4414de6437ce",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5885abde-e3ef-4509-bfcd-cdaf0a09f576",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d18bdc93-b3d1-4110-8295-439ae1938323",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShieldAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b04c531c-21cd-456c-9ad3-58612294eff3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "9251d334-1473-47bf-8723-56565cb0df38",
            "actions": [
                {
                    "name": "Delta",
                    "type": "Value",
                    "id": "568f9be8-7ebf-48ab-8c6a-7bdbefdb7733",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2917f6b7-3339-4a22-a111-e33cbc1c5c20",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}